# rapidapi-telegram

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: custom_transport.py  get_channel_by_username.py  resolve_username.py  search_messages.py
src/rapidapi_telegram/: __init__.py  client.py  errors.py  transport.py
tests/: test_client.py
